last minute fix for the landing image which was not centered on viewport heights smaller then 800px

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -24,12 +24,14 @@
 
 html {
   font-size: 62.5%;
+  height: 100%;
 }
 
 body {
   color: var(--color-black);
   font-family: Montserrat, -apple-system, BlinkMacSystemFont, 'Segoe UI', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
   font-size: var(--font-normal);
+  height: 100%;
 }
 
 /* general purpose */
@@ -98,8 +100,7 @@ a:hover {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  margin-top: -4rem;
-  min-height: 90vh;
+  min-height: calc(100vh - 8rem);
 }
 
 .landing_image {
